fix toolbar z-index

--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  z-index: 99;
 }
 
 .logo {
